# MesmerSegmentation

./: .gitignore  Dockerfile  README.md  conda.yml  main.nf  marek_notes.md  modules.json  nextflow.conf  pyproject.toml
.github/workflows/: build-docker.yml  ci.yml
src/mesmer_segment/: __init__.py  cli.py  io.py  segmentation.py
test/: conftest.py  create_test_data.py  run_integration.sh  test_io.py  test_segmentation.py
