[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mesmer_segment"
version = "0.1.0"
requires-python = "<=3.10"
dependencies = [
    "typer",
    "deepcell",
    "tifffile",
    "xarray",
    "rasterio",
    "scikit-image",
    "geopandas"
]

[project.scripts]
mesmer-segment = "mesmer_segment:app"
